--- a/product/templates/Dashboard.html
+++ b/product/templates/Dashboard.html
@@ -1,7 +1,10 @@
+<head>
+	<LInk></LInk>
+</head>
 {% extends 'layout/one_layout.html' %}
     {% block content %}
-	<header>
-		<h1>Tus productos</h1>
+	<header class="texto-centrado">
+		<h1  style="color: rgb(241, 71, 190);  text-align: center;">Tus productos</h1>
 	</header>
 	<main>
 		<section id="categorias">
@@ -13,9 +16,9 @@
 		</section>
 		<section id="productos">
             {{ block table}}
-			<h2>Lista de Productos </h2>
+			<h2 style="height: 6%; width: 17%; margin:0%; background-color: rgb(36, 37, 37);color: aliceblue; text-align: center;">Lista de Productos </h2>
 			<table>
-				<thead>
+				<thead style="width: 100px; margin: 30px auto; background-color: rgb(64, 146, 218);">
 					<tr>
 						<th>Producto</th>
 						<th>Categoria</th>
