--- a/product/templates/Dashboard.html
+++ b/product/templates/Dashboard.html
@@ -9,10 +9,10 @@
 	</header>
 	<main>
 		<section id="categorias">
-			<h2>Lista de Categorías</h2>
+			<h2 class="col-sm-12 text-center">Lista de Categorías</h2>
 			{% comment %} {% block categories %}  {% endcomment %}
 			<Lista>
-				<h1>Lista de Categorías</h1>
+				<h1 class="col-sm-12 text-center">Lista de Categorías</h1>
 				<ul>
 					<!-- Aquí se mostrarán las categorías -->
 					{% for c in categories %}
@@ -30,40 +30,44 @@
 			{% block table %}
 
 			{% endblock %}
-			<button class="btn btn-outline-danger">
-				<a style="text-decoration: none;" href="{% url 'add_products' %}"> Nuevo Producto </a>  
-			</button>
 
-            {{ block table}}
-			<h2 style="height: 6%; width: 17%; margin:0%; background-color: rgb(36, 37, 37);color: aliceblue; text-align: center;">Lista de Productos </h2>
-			<table>
-				<thead style="width: 100px; margin: 30px auto; background-color: rgb(64, 146, 218);">
-					<tr>
-						<th>Producto</th>
-						<th>Categoria</th>
-						<th>Nombre de categoria</th>
-						<th>Descripción</th>
-						<th>Precio</th>
-                        <th>imagen</th>
-					</tr>
-				</thead>
-				<tbody>
-					<!-- Aquí se mostrarán los productos -->
-                    {% for p in products %}
-                    <tr>
-                        <td>{{ p.Product }}</td>
-                        <td>{{ p.category }}</td>
-                        <td>{{ p.description }}</td>
-                        <td>{{ p.price}}</td>
-                        <td>{{ p.image }}</td>
-                    </tr>
-                    {% endfor %}
-				</tbody>
-			</table>
-            {{ endblock }}
-			<button type="button" id="btn-nuevo-producto">Nuevo Producto</button>
+            {% comment %} {{ block table}} {% endcomment %}
+			<h2 style="height: 6%; width: 100%; margin:0%; color: #000; text-align: center;">Lista de Productos </h2>
+			<div class="d-flex justify-content-center table-responsive" style="margin: 0px; padding: 20px;">
+				<table class="table w-100">
+					<thead style="width: 100%; margin: 20px; background: #804674; color: #fff;">
+						<tr>
+							<th>Producto</th>
+							<th>Categoria</th>
+							<th>Nombre de categoria</th>
+							<th>Descripción</th>
+							<th>Precio</th>
+							<th>imagen</th>
+						</tr>
+					</thead>
+					<tbody>
+						<!-- Aquí se mostrarán los productos -->
+						{% for p in products %}
+						<tr>
+							<td>{{ p.Product }}</td>
+							<td>{{ p.category }}</td>
+							<td>{{ p.description }}</td>
+							<td>{{ p.price}}</td>
+							<td>{{ p.image }}</td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+			<div class="text-center">
+				<button class="btn btn-outline-primary">
+					<a style="text-decoration: none;" href="{% url 'add_products' %}"> Nuevo Producto </a>  
+				</button>
+			</div>
+            {% comment %} {{ endblock }} {% endcomment %}
+			{% comment %} <button type="button" id="btn-nuevo-producto">Nuevo Producto</button> {% endcomment %}
 		</section>
-		<section id="formulario">
+		{% comment %} <section id="formulario">
 			<!-- Formulario para categoria -->
 			<form id="form-categoria">
 				<label for="nombre-categoria">Nombre:</label>
@@ -87,7 +91,7 @@
 				<button type="button" id="btn-cancelar-producto">Cancelar</button>
 			</form>
 
-		</section>
+		</section> {% endcomment %}
 	</main>
 	<footer>
 		<p>Diseñado por Santiago Guzman que no sabe nada</p>
