cambios en el dahsboard

--- a/product/templates/Dashboard.html
+++ b/product/templates/Dashboard.html
@@ -34,7 +34,7 @@
             {% comment %} {{ block table}} {% endcomment %}
 			<h2 style="height: 6%; width: 100%; margin:0%; color: #000; text-align: center;">Lista de Productos </h2>
 			<div class="d-flex justify-content-center table-responsive" style="margin: 0px; padding: 20px;">
-				<table class="table w-100">
+				<table class="table table-sm w-100 table-bordered">
 					<thead style="width: 100%; margin: 20px; background: #804674; color: #fff;">
 						<tr>
 							<th>Producto</th>
