modificación de los archivos que generan la vista en el navegador del CRUD

--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'layout/one_layout.html' %}
+{% extends 'layout/home_layout.html' %}
 {% load static %}
 
 
@@ -687,10 +687,6 @@
         </div>
     </div>
 </div>
-<!-- Footer End -->
-
-
-
 {% endblock %}
 
 
