CRUD para productos y categorias creado

--- a/product/templates/Dashboard.html
+++ b/product/templates/Dashboard.html
@@ -6,6 +6,9 @@
 		{% block dashboard_table_products %}
 		{% include 'products/index_products.html' %}
 		{% endblock dashboard_table_products %}
+		
+		{% block categories %}
+		{% endblock categories %}
 	</main>
 	<footer>
 		<p>Diseñado por Santiago Guzman</p>
