--- a/product/templates/categories/add_categories.html
+++ b/product/templates/categories/add_categories.html
@@ -1,11 +1,14 @@
 {% extends 'layout/home_layout.html' %}
 
 {% block content %}
-<form method="POST">
+<form method="POST" class="bg-light p-3">
     {% csrf_token %}
-    <div style ="<i class="fa fa-columns aria-hidden="true"></i>3
-        {{ form.as_p }}
-    </div>    
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <div class="row">
+        <div class="col-md-3">
+            <i class="fa fa-columns" aria-hidden="true"></i>
+            {{ form.as_p }}
+        </div>    
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Salvar</button>
 </form>
 {% endblock %}
