--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -1,10 +1,34 @@
 
 {% load static %}
+{% load widget_tweaks %}
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static 'owlcarousel/assets/owl.carousel.min.css' %}">
+        <meta charset="utf-8">
+        <title>EShopper - Bootstrap Shop Template</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta content="Free HTML Templates" name="keywords">
+        <meta content="Free HTML Templates" name="description">
+    
+        <!-- Favicon -->
+        <link href="{% static 'img/favicon.ico' %}" rel="icon">
+    
+        <!-- Google Web Fonts -->
+        <link rel="preconnect" href="{% static 'https://fonts.gstatic.com' %}">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
+    
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    
+        <!-- Libraries Stylesheet -->
+        <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+    
+        <!-- Customized Bootstrap Stylesheet -->
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="">
+
+        <!-- <link rel="stylesheet" type="text/css" href="{% static 'owlcarousel/assets/owl.carousel.min.css' %}">
     
         <meta charset="utf-8">
         <title>EShopper - Bootstrap Shop Template</title>
@@ -14,37 +38,32 @@
     
         
 
-        <!-- Favicon -->
+        Favicon
         <link href="img/favicon.ico" rel="icon">
     
-        <!-- Google Web Fonts -->
+        Google Web Fonts
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-        <!-- Font Awesome -->
+        Font Awesome
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     
-        <!-- Libraries Stylesheet -->
+        Libraries Stylesheet
         <link href="{% static 'owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        Customized Bootstrap Stylesheet
+        <link href="{% static 'css/style.css' %}" rel="stylesheet"> -->
     </head>
     <body>
         {% block content %}
 
         {% endblock content %}
 
-    
-    <!-- Footer End -->
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'lib/easing/easing.min.js' %}"></script>
+    <script src="{% static 'lib/easing/easing.min.js'"></script>
     <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
 
     <!-- Contact Javascript File -->
@@ -56,5 +75,4 @@
 
     <!-- Template Icons Social Media -->
     <script src="https://kit.fontawesome.com/1341a0016b.js" crossorigin="anonymous"></script>
-    </body>
 </html>
