--- a/product/templates/products/add_products.html
+++ b/product/templates/products/add_products.html
@@ -1,11 +1,31 @@
 {% extends "layout/home_layout.html" %}
+{% load static %}
 
 {% block content %}
-<form method="POST" class="bg-light p-3">
-    {% csrf_token %}
-    <div class="form-group">
-        {{ form.as_p }}
-    </div>    
-    <button type="submit" class="btn btn-primary">Guardar</button>
-</form>
+
+<div class="container-content100 border-9">
+    <form method="POST" class="bg-light p-3 border-9">
+        <div class="card card-default border-9" >
+            <div class="card-header border-9">
+                <h3 class="card-title border-9">
+                    <i class="fas fa-pius border-9"></i>
+    
+                </h3>
+            </div>
+            <div class="card-body bg-secondary border border-primary ">
+                {% csrf_token %}
+                <div class="m-0 vh-100 row justify-content-center align-items-center">
+                    <div class="form-group border-color  border border-primary col-6 col-md-4  ">
+                        {{ form.as_p }}
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer m-0 vh-90 row justify-content-center align-items-center">
+                <button type="submit" class="btn btn-primary btn-flat ">
+                <i class="fas fa-save "></i> Guardar</button>
+            </div>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
