--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9582,3 +9582,16 @@ a.text-dark:hover, a.text-dark:focus {
     transform: translateY(-15px);
   }
 }
+
+.xd{
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 20px;
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  z-index: 11;
+  animation: action 1s infinite alternate;
+}
