--- a/product/templates/categories/add_categories.html
+++ b/product/templates/categories/add_categories.html
@@ -1,14 +1,57 @@
 {% extends 'layout/home_layout.html' %}
 
 {% block content %}
+<div class="row bg-secondary py-2 px-xl-5">
+    <div class="col-lg-6 d-none d-lg-block">
+        <div class="d-inline-flex align-items-center">
+            <a class="text-dark" href="">FAQs</a>
+            <span class="text-muted px-2">|</span>
+            <a class="text-dark" href="">Help</a>
+            <span class="text-muted px-2">|</span>
+            <a class="text-dark" href="">Support</a>
+        </div>
+    </div>
+    <div class="col-lg-6 text-center text-lg-right">
+        <div class="d-inline-flex align-items-center">
+            <a class="text-dark px-2" href="">
+            <i class="fab fa-instagram"></i>
+            </a>
+            <!-- <a class="text-dark pl-2" href="">
+                <i class="fab fa-youtube"></i>
+            </a> -->
+        </div>
+    </div>
+</div>
+<div class="row align-items-center py-3 px-xl-5">
+    <div class="col-lg-3 d-none d-lg-block">
+        <a href="" class="text-decoration-none">
+            <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">X</span>Xilena Desings</h1>
+        </a>
+    </div>
+    <div class="col-lg-6 col-6 text-left">
+        <form action="">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Buscar productos">
+                <div class="input-group-append">
+                    <span class="input-group-text bg-transparent text-primary">
+                        <i class="fa fa-search"></i>
+                    </span>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 <form method="POST" class="bg-light p-3">
     {% csrf_token %}
-    <div class="row">
-        <div class="col-md-3">
-            <i class="fa fa-columns" aria-hidden="true"></i>
+    <div class=" m-0 vh-100 row justify-content-center align-items-center ">
+        <div class="col-md-4 border border-primary bg-secondary " >
+            <i class="fa fa-columns  " aria-hidden="true">agregar</i>
             {{ form.as_p }}
+            <br><br><div class="card-footer m-0 vh-90 row justify-content-center align-items-center bg-secondary" >
+                <button type="submit" class="btn btn-primary mt-3 justify-content-center align-items-center">Salvar</button>
+            </div>
         </div>    
     </div>
-    <button type="submit" class="btn btn-primary mt-3">Salvar</button>
+    
 </form>
 {% endblock %}
