--- a/product/templates/products/add_products.html
+++ b/product/templates/products/add_products.html
@@ -4,28 +4,66 @@
 {% block content %}
 
 <div class="container-content100 border-9">
-    <form method="POST" class="bg-light p-3 border-9">
-        <div class="card card-default border-9" >
-            <div class="card-header border-9">
-                <h3 class="card-title border-9">
-                    <i class="fas fa-pius border-9"></i>
-    
-                </h3>
+    <div class="row bg-secondary py-2 px-xl-5">
+        <div class="col-lg-6 d-none d-lg-block">
+            <div class="d-inline-flex align-items-center">
+                <a class="text-dark" href="">FAQs</a>
+                <span class="text-muted px-2">|</span>
+                <a class="text-dark" href="">Help</a>
+                <span class="text-muted px-2">|</span>
+                <a class="text-dark" href="">Support</a>
             </div>
-            <div class="card-body bg-secondary border border-primary ">
+        </div>
+        <div class="col-lg-6 text-center text-lg-right">
+            <div class="d-inline-flex align-items-center">
+                <a class="text-dark px-2" href="">
+                <i class="fab fa-instagram"></i>
+                </a>
+                <!-- <a class="text-dark pl-2" href="">
+                    <i class="fab fa-youtube"></i>
+                </a> -->
+            </div>
+        </div>
+    </div>
+    <div class="row align-items-center py-3 px-xl-5">
+        <div class="col-lg-3 d-none d-lg-block">
+            <a href="" class="text-decoration-none">
+                <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">X</span>Xilena Desings</h1>
+            </a>
+        </div>
+        <div class="col-lg-6 col-6 text-left">
+            <form action="">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Buscar productos">
+                    <div class="input-group-append">
+                        <span class="input-group-text bg-transparent text-primary">
+                            <i class="fa fa-search"></i>
+                        </span>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <form method="POST" class="bg-light p-3 ">
+            <div class="card-body  ">
                 {% csrf_token %}
                 <div class="m-0 vh-100 row justify-content-center align-items-center">
-                    <div class="form-group border-color  border border-primary col-6 col-md-4  ">
+                    <div class="form-group border-color  border border-primary col-6 col-md-4 bg-secondary ">
                         {{ form.as_p }}
+
+                        <br><div class="card-footer m-0 vh-90 row justify-content-center align-items-center bg-secondary ">
+                            <button type="submit" class="btn btn-primary  ">
+                            <i class="fas fa-save "></i> Guardar</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card-footer m-0 vh-90 row justify-content-center align-items-center">
-                <button type="submit" class="btn btn-primary btn-flat ">
-                <i class="fas fa-save "></i> Guardar</button>
-            </div>
+            
         </div>
+        
     </form>
+    
 </div>
+
 
 {% endblock %}
