--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -12,60 +12,34 @@
         <meta content="Free HTML Templates" name="description">
     
         <!-- Favicon -->
-        <link href="{% static 'img/favicon.ico' %}" rel="icon">
+        {% comment %} <link href="{% static 'img/favicon.ico' %}" rel="icon"> {% endcomment %}
     
         <!-- Google Web Fonts -->
-        <link rel="preconnect" href="{% static 'https://fonts.gstatic.com' %}">
+        {% comment %} <link rel="preconnect" href="{% static 'https://fonts.gstatic.com' %}"> {% endcomment %}
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
     
         <!-- Font Awesome -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     
-        <!-- Libraries Stylesheet -->
-        <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
     
         <!-- Customized Bootstrap Stylesheet -->
-        <link href="{% static 'css/style.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="">
-
-        <!-- <link rel="stylesheet" type="text/css" href="{% static 'owlcarousel/assets/owl.carousel.min.css' %}">
-    
-        <meta charset="utf-8">
-        <title>EShopper - Bootstrap Shop Template</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free HTML Templates" name="keywords">
-        <meta content="Free HTML Templates" name="description">
-    
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         
-
-        Favicon
-        <link href="img/favicon.ico" rel="icon">
-    
-        Google Web Fonts
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
-        Font Awesome
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    
-        Libraries Stylesheet
-        <link href="{% static 'owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-    
-        Customized Bootstrap Stylesheet
-        <link href="{% static 'css/style.css' %}" rel="stylesheet"> -->
+        <link href=" {% static 'css/estilos.css' %}" rel="stylesheet">
+        
     </head>
     <body>
+        {% include 'partials/header.html' %}
+
         {% block content %}
 
         {% endblock content %}
 
+        {% include 'partials/footer.html' %}
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'lib/easing/easing.min.js'"></script>
-    <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
 
+    <!-- iconos libraries -->
+    <script src="{% static 'https://unpkg.com/boxicons@2.1.4/dist/boxicons.js' %}"></script>
     <!-- Contact Javascript File -->
     <script src="{% static 'mail/jqBootstrapValidation.min.js' %}"></script>
     <script src="{% static 'mail/contact.js' %}"></script>
@@ -74,5 +48,6 @@
     <script src="{% static 'js/main.js' %}"></script>
 
     <!-- Template Icons Social Media -->
-    <script src="https://kit.fontawesome.com/1341a0016b.js" crossorigin="anonymous"></script>
+    {% comment %} <script src="https://kit.fontawesome.com/1341a0016b.js" crossorigin="anonymous"></script> {% endcomment %}
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </html>
