--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -9,16 +9,16 @@
 <div class="container-slider">
     <div class="slider" id="slider">
         <div class="slider__section">
-            <img src="img/diseño 18 (1).jpg" alt="" class="slider__img">
+            <img src={% static  '/img/Aretes/2022 1.jpeg' %} alt="" class="slider__img">
         </div>
         <div class="slider__section">
-            <img src="img/diseño 11 (1).jpg" alt="" class="slider__img">
+            <img src="static/img/Aretes/2022 1.jpe" alt="" class="slider__img">
         </div>
         <div class="slider__section">
-            <img src="img/diseño 13 (1).jpg" alt="" class="slider__img">
+            <img src="img/Aretes/2022 1.jpe" alt="" class="slider__img">
         </div>
         <div class="slider__section">
-            <img src="img/diseño 18 (1).jpg" alt="" class="slider__img">
+            <img src="img/Aretes/2022 1.jpe" alt="" class="slider__img">
         </div>
     </div>
     <div class="slider__btn slider__btn--right">&#62;</div>
@@ -63,7 +63,7 @@
         <div class="product-container">
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/diseño 13 (1).jpg">
+                    <img src=" img/Aretes/2022 2.jpeg">
                     <div class="description">
                         <a href="#">anadir al carro</a>
                         <a href="#">ver producto</a>
@@ -77,7 +77,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/diseño 13 (1).jpg">
+                    <img src="img/Aretes/2022 3.jpeg">
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -91,7 +91,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/diseño 13 (1).jpg">
+                    <img src="img/Aretes/2022 4.jpeg">
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -105,7 +105,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card ">
-                    <img src="img/diseño 13 (1).jpg">
+                    <img src="img/Aretes/2022 5.jpeg">
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -119,7 +119,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/diseño 13 (1).jpg">
+                    <img src="img/Aretes/2022 1.jpeg">
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -133,7 +133,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/diseño 13 (1).jpg">
+                    <img src="img/Aretes/2022 7.jpe">
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
