--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -24,8 +24,9 @@
     
         <!-- Customized Bootstrap Stylesheet -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        
+        <!--link de estilos-->
         <link href=" {% static 'css/estilos.css' %}" rel="stylesheet">
+        <link href=" {% static 'css/login.css' %}" rel="stylesheet">
         
     </head>
     <body>
