--- a/product/templates/partials/header.html
+++ b/product/templates/partials/header.html
@@ -33,10 +33,8 @@
             <form action="">
                 <div class="Boton input-group">
                     <input type="text" class="form-control" placeholder="Buscar productos">
-                    <div class="input-group-append">
-                        <button class="Boton btn-buscar">
-                            <box-icon class="Boton btn-buscar" name='search-alt'></box-icon>
-                        </button>
+                    <div class="Ibuscar input-group-append">                      
+                        <box-icon class="Boton btn-buscar" name='search-alt' width"150px"></box-icon>                       
                     </div>
                 </div>
             </form>
