newUser y password(sandra)
le estoy acomodando las url, y mirando el css causan error

--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -27,6 +27,8 @@
         <!--link de estilos-->
         <link href=" {% static 'css/estilos.css' %}" rel="stylesheet">
         <link href=" {% static 'css/login.css' %}" rel="stylesheet">
+        <link href=" {% static 'css/newUser.css' %}" rel="stylesheet">
+        <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
         
     </head>
     <body>
