--- a/product/templates/partials/header.html
+++ b/product/templates/partials/header.html
@@ -7,11 +7,11 @@
     <div class="menuicono row  py-2 px-xl-5">
         <div class="col-lg-6 d-none d-lg-block">
             <div class="d-inline-flex align-items-center">
-                <a class="text-dark" href="">FAQs</a>
+                <a class="text-dark" href="/recoverPassword.html">FAQs</a>
                 <span class="text-muted px-2">|</span>
-                <a class="text-dark" href="">Ingresar</a>
+                <a class="text-dark" href="./login.html">Ingresar</a>
                 <span class="text-muted px-2">|</span>
-                <a class="text-dark" href="">Crea tu cuenta</a>
+                <a class="text-dark" href="nuwUser.html">Crea tu cuenta</a>
                 <span class="text-muted px-2">|</span>
                 <a href="https://www.instagram.com/xilenadesigns/">
                 <box-icon type='logo'  name='instagram'></box-icon></a>
