vistas producto (bryan)

--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -29,13 +29,14 @@
         <link href=" {% static 'css/login.css' %}" rel="stylesheet">
         <link href=" {% static 'css/newUser.css' %}" rel="stylesheet">
         <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
+        <link href=" {% static 'css/productViews.css' %}" rel="stylesheet">
         
     </head>
     <body>
         {% include 'partials/header.html' %}
 
         {% block content %}
-
+ 
         {% endblock content %}
 
         {% include 'partials/footer.html' %}
