--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-
+{% comment %} 
 <!--imagen grande carrocel  -->
 <div class="container-slider">
     <div class="slider" id="slider">
@@ -147,11 +147,8 @@
             </div>
         </div><!--hasta aqui va-->
 
-
-
-
     </div>
-</div>
+</div> {% endcomment %}
 {% endblock %}
 
 
