--- a/product/templates/layout/one_layout.html
+++ b/product/templates/layout/one_layout.html
@@ -1,8 +1,7 @@
-{% extends 'products/index_products.html' %}
+{% comment %} {% extends 'products/index_products.html' %} {% endcomment %}
 {% load static %}
 
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
     <head>
 
@@ -25,6 +24,7 @@
         </header>
         <main>
             {% block content %}
+
             {% endblock %}
         </main>
         <footer>
