--- a/product/templates/partials/header.html
+++ b/product/templates/partials/header.html
@@ -34,17 +34,28 @@
                 <div class="Boton input-group">
                     <input type="text" class="form-control" placeholder="Buscar productos">
                     <div class="Ibuscar input-group-append">                      
-                        <box-icon class="Boton btn-buscar" name='search-alt' width"150px"></box-icon>                       
+                        <button class="btn btn-outline-secondary" type="button">
+                            <box-icon name='search-alt-2' ></box-icon>
+                        </button>                       
                     </div>
                 </div>
             </form>
         </div>
         <div class="cajaBusqueda col-lg-3 col-6 ">
-            <a href="" class="cajaBusqueda icono-menu col-6">
-                <box-icon name='whatsapp-square' type='logo' color='#732579' ></box-icon>
-            </a>
-            <h3 href="" class="cajaBusqueda text-dark col-6">whatsapp</h3>
-            
+            <div class="row">
+
+                <div class="col-6"> 
+                    <a href="" class="cajaBusqueda icono-menu col-6">
+                        <box-icon  name='whatsapp-square' type='logo' color='#732579' ></box-icon>
+                    </a>
+                </div>
+                
+                
+                <div class="col-6"> 
+                    <h3 href="" class="cajaBusqueda text-dark col-6">whatsapp</h3>
+                </div>
+                
+            </div
         </div>
     </div>
 </div>
