--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -26,20 +26,20 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <!--link de estilos-->
         <link href=" {% static 'css/estilos.css' %}" rel="stylesheet">
-        <link href=" {% static 'css/login.css' %}" rel="stylesheet">
+        {% comment %} <link href=" {% static 'css/login.css' %}" rel="stylesheet">
         <link href=" {% static 'css/newUser.css' %}" rel="stylesheet">
         <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
         <link href=" {% static 'css/productViews.css' %}" rel="stylesheet">
-        
+         {% endcomment %}
     </head>
     <body>
         {% include 'partials/header.html' %}
 
         {% block content %}
- 
+        
         {% endblock content %}
 
-        {% include 'partials/footer.html' %}
+        {% comment %} {% include 'partials/footer.html' %} {% endcomment %}
 
 
     <!-- iconos libraries -->
