--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -3,8 +3,7 @@
 
 
 
-{% block content %}
-{% comment %} 
+{% block content %} 
 <!--imagen grande carrocel  -->
 <div class="container-slider">
     <div class="slider" id="slider">
@@ -148,7 +147,7 @@
         </div><!--hasta aqui va-->
 
     </div>
-</div> {% endcomment %}
+</div> 
 {% endblock %}
 
 
