--- a/product/templates/layout/home_layout.html
+++ b/product/templates/layout/home_layout.html
@@ -31,6 +31,8 @@
         <link href=" {% static 'css/recoverPassword.css' %}" rel="stylesheet">
         <link href=" {% static 'css/productViews.css' %}" rel="stylesheet">
          {% endcomment %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    </head>
     </head>
     <body>
         {% include 'partials/header.html' %}
@@ -39,17 +41,17 @@
         
         {% endblock content %}
 
-        {% comment %} {% include 'partials/footer.html' %} {% endcomment %}
+        {% include 'partials/footer.html' %}  
 
 
-    <!-- iconos libraries -->
+    {% comment %} <!-- iconos libraries -->
     <script src="{% static 'https://unpkg.com/boxicons@2.1.4/dist/boxicons.js' %}"></script>
     <!-- Contact Javascript File -->
     <script src="{% static 'mail/jqBootstrapValidation.min.js' %}"></script>
-    <script src="{% static 'mail/contact.js' %}"></script>
+    <script src="{% static 'mail/contact.js' %}"></script> {% endcomment %}
 
     <!-- Template Javascript -->
-    <script src="{% static 'js/main.js' %}"></script>
+    
 
     <!-- Template Icons Social Media -->
     {% comment %} <script src="https://kit.fontawesome.com/1341a0016b.js" crossorigin="anonymous"></script> {% endcomment %}
