--- a/product/templates/home.html
+++ b/product/templates/home.html
@@ -8,16 +8,16 @@
 <div class="container-slider">
     <div class="slider" id="slider">
         <div class="slider__section">
-            <img src={% static  '/img/Aretes/2022 1.jpeg' %} alt="" class="slider__img">
+            <img src={% static  '/img/Aretes I/2022 1.jpeg' %}alt="" class="slider__img">
         </div>
         <div class="slider__section">
-            <img src="static/img/Aretes/2022 1.jpe" alt="" class="slider__img">
+            <img src={% static  '/img/Aretes I/2022 1.jpeg' %} alt="" class="slider__img">
         </div>
         <div class="slider__section">
-            <img src="img/Aretes/2022 1.jpe" alt="" class="slider__img">
+            <img src={% static  '/img/Aretes I/2022 1.jpeg' %} alt="" class="slider__img">
         </div>
         <div class="slider__section">
-            <img src="img/Aretes/2022 1.jpe" alt="" class="slider__img">
+            <img src={% static  '/img/Aretes I/2022 1.jpeg' %} alt="" class="slider__img">
         </div>
     </div>
     <div class="slider__btn slider__btn--right">&#62;</div>
@@ -62,7 +62,7 @@
         <div class="product-container">
             <div class="producto">
                 <div class="ui-card">
-                    <img src=" img/Aretes/2022 2.jpeg">
+                    <img src={% static  '/img/Aretes I/2022 1.jpeg' %}>
                     <div class="description">
                         <a href="#">anadir al carro</a>
                         <a href="#">ver producto</a>
@@ -76,7 +76,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/Aretes/2022 3.jpeg">
+                    <img src={% static  '/img/Aretes I/2022 1.jpeg' %}>
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -90,7 +90,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/Aretes/2022 4.jpeg">
+                    <img src={% static  '/img/Aretes I/2022 1.jpeg' %}>
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -104,7 +104,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card ">
-                    <img src="img/Aretes/2022 5.jpeg">
+                    <img src={% static  '/img/Aretes I/2022 1.jpeg' %}>
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -118,7 +118,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/Aretes/2022 1.jpeg">
+                    <img src={% static  '/img/Aretes I/2022 1.jpeg' %}>
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
@@ -132,7 +132,7 @@
             </div>
             <div class="producto">
                 <div class="ui-card">
-                    <img src="img/Aretes/2022 7.jpe">
+                    <img src= 'static/img/Aretes I/2022 1.jpeg' >
                     <div class="description">
                         <a href="#">Add to Cart</a>
                         <a href="#">View Product</a>
