--- a/product/templates/login.html
+++ b/product/templates/login.html
@@ -1,32 +1,9 @@
-{% load widget_tweaks %}
+{% extends 'layout/home_layout.html' %}
 {% block content %}
 {% load static  %}
 
 
 <div>
-        <div>
-            <img src="img/Logo Xilena Design (1).jpg" class="logologin" alt="">
-        </div>
-        <div class="menulo">
-            <div class="menulogin">
-                <div class="search-container">
-                    <i class="fas fa-search search-icon"></i>
-                    <input id="buscar" class="buscar" type="text" placeholder="buscador..." />
-                    <button id="btn" class="btn">Buscar</button>
-                    <div id="panel" class="panel"></div>
-                </div>
-                <a href=""><i class="fa-solid fa-plus" style="color: #fafcff;"></i>agregar</a>
-                <a href="#"><i class="fa-solid fa-bell" style="color: #62135f;"></i></a>
-                <img src="img/Logo Xilena Design (1).jpg" alt="">
-
-            </div>
-        </div>
-        <div>
-            <img src="img/Logo Xilena Design (2).jpg" class="logologin" alt="">
-        </div>
-        
-
-
         <form class="login">
             <div class="logi2">
                 <div class="titli">
