--- a/static/css/login.css
+++ b/static/css/login.css
@@ -115,7 +115,7 @@ form .formulario input{
     left: 1%;
     margin-top: 6%;
 }
-.boton{/*mostra con buton*/
+.botonLogin{/*mostra con buton*/
     width: 30px; 
     height: 26px; 
     background: #D9D9D9; 
@@ -208,14 +208,6 @@ a i{
 }
 
 
-.btn {
-    padding: 10px 12px;
-    background-color: #21b81c;
-    color: #fdfbfb;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
 
   /* Estilos para el panel de resultados */
 
